feats : fixed gaps of nav and main for smaller devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -339,3 +339,10 @@ svg circle {
     max-height: 420px;
   }
 }
+
+@media (max-width: 480px) {
+  .main {
+    height: 43vh;
+  }
+  
+}
